--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <html>
 <head>
-    <script src="https://keycloak-rhsso.apps.cluster-rm56t.rm56t.sandbox3061.opentlc.com/auth/js/keycloak.js"></script>
+    <script src="https://keycloak-user5-rhsso.apps.caixasso.sandbox2528.opentlc.com/auth/js/keycloak.js"></script>
 
     <link href="/patternfly/css/patternfly.css" rel="stylesheet" />
     <link href="/patternfly/css/patternfly-additions.css" rel="stylesheet" />
